# Experimental-CI

./: .gitignore  0006-shader-cache-expand.patch  Agents.md  CMakeLists.txt  LICENSE  README.md  SETUP_QODER.md  android-aarch64  android-arrch64  build.sh  build_turnip.sh  t-d.sh  turnip-driver.sh  turnip_builder.sh  vk_extensions_patch.py
.github/workflows/: build-a750.yml  build-a8xx.yml  build-ad07xx.yml  build-arm64ec.yml  build-nvidia.yml  build-p.yml  build-test.yml  build-turnip.yml  build-wrapper.yml  build-x86_64.yml  build.yml  build_t-d.yml  build_test.yml  build_turinp.yml  build_turnip.yml  dragon_driver.yml  dragon_forge.yml  qoder-assistant.yml  qoder-review.yml  release-ad7xx.yml  release-ad8xx.yml  release-turnip.yml  release.yml  t-d.yml  test.yml  turnip-driver.yml  turnip.yml  turnip_driver.yml  vkd3d-arm64ec-test.yml  vkd3d-arm64ec.yml  vkd3d-proton-arm64ec.yml  vkd3d-proton.yml  vkd3d-test.yml  vkd3d.yml  yourfile.yml
config/: variants.conf
mesa/patches/a750/: 0006-shder-cache-expand.patch
meta/: meta-a750.json
patches/: compatibility_fixes.patch  patcher.py  performance.py  sysmem_rendering.patch
scripts/: build.sh  build_mesa_android.sh  build_turnip.sh  driver.sh  forge.sh  patch_a8xx_kgsl.py  patch_deck_emu.py  patch_ext_count.py  patch_ext_fields.py  patch_ext_support.py  patcher.py  vk_extensions_patch.py
spells/common/: memory_fix.patch
spells/dx12/: ue5_resource_aliasing.patch
spells/falcon/: a6xx_fix.patch  fix_vb_size.patch  lrz_fix.patch  vertex_buffer_fix.patch
src/: bcn_decompress.comp.glsl  bcn_decompressor.cpp  dxvk_compat.cpp  present_manager.cpp  spirv_patcher.cpp
src/include/: wrapper.h
